[gd_scene load_steps=8 format=3 uid="uid://b6dyar24p4xni"]

[ext_resource type="Texture2D" uid="uid://bk87l7m3lm20d" path="res://Art/MushroomBloke/mushmush.png" id="1_0gwu3"]
[ext_resource type="Script" path="res://Art/MushroomBloke/mushmush.gd" id="1_utsev"]
[ext_resource type="AudioStream" uid="uid://cuop3q526q2x3" path="res://Sounds/MushMush/pop.wav" id="3_ybrco"]

[sub_resource type="Animation" id="Animation_cebtf"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Minotaur:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_6egce"]
resource_name = "Normal"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ftcw"]
_data = {
"Hurt": SubResource("Animation_cebtf"),
"Normal": SubResource("Animation_6egce")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_sq2cy"]
radius = 33.13

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemies"]]
z_index = 2
scale = Vector2(2.6, 2.6)
collision_layer = 2
collision_mask = 19
motion_mode = 1
script = ExtResource("1_utsev")

[node name="Mushmush" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.90735e-06, -2.86102e-06)
scale = Vector2(1.10625, 1.10625)
texture = ExtResource("1_0gwu3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ftcw")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.32351, 1.30257)
shape = SubResource("CircleShape2D_sq2cy")

[node name="FireSpot" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="UntilBurst" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_ybrco")
max_distance = 2500.0

[connection signal="timeout" from="UntilBurst" to="." method="_on_until_burst_timeout"]
